Parser is blank fix